--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "chat_application",
+    "name": "chatapplication",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -9,12 +9,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-
         "dotenv": "^16.4.5",
         "ejs": "^3.1.10",
         "express": "^4.21.1",
         "mongoose": "^8.8.1",
         "socket.io": "^4.8.1",
-
     }
 }
