--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "chatapplication",
+    "name": "chat_application",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -13,6 +13,6 @@
         "ejs": "^3.1.10",
         "express": "^4.21.1",
         "mongoose": "^8.8.1",
-        "socket.io": "^4.8.1",
+        "socket.io": "^4.8.1"
     }
 }
